--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "ejs": "2.3.3",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "express-session": ">0.1",
+    "body-parser": ">0.1"
   },
   "engines": {
     "node": "0.12.7"
