--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "4.13.3",
     "express-session": ">0.1",
     "body-parser": ">0.1",
-    "grant-express" : "3.5.0"
+    "grant-express" : "3.5.0",
+    "fantasy-sports": "0.3.0"
   },
   "engines": {
     "node": "0.12.7"
