--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "grant-express" : "3.5.0",
     "fantasysports": "0.3.0",
     "request" : "2.61.0",
-    "mongodb" : ">=2.0.14"
+    "mongodb" : ">=2.0.14",
+    "passport": ">=0.3.0",
+    "passport-yahoo": ">=0.3.0"
   },
   "engines": {
     "node": "0.12.7"
