--- a/public/package.json
+++ b/public/package.json
@@ -31,7 +31,8 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-tasks": "^0.4.0",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "bower" : "1.3.12"
   },
   "engines": {
     "node": ">=0.10.0"
