try preinstall echo

--- a/public/package.json
+++ b/public/package.json
@@ -39,6 +39,7 @@
   },
   "scripts": {
     "test": "grunt test",
+    "preinstall": "echo ZXZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ\n\n\n",
     "postinstall": "bower install"
   }
 }
