--- a/public/package.json
+++ b/public/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextgreatfantasyapp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {"bower" : "1.3.12"},
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
@@ -31,8 +31,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-tasks": "^0.4.0",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^0.3.1",
-    "bower" : "1.3.12"
+    "time-grunt": "^0.3.1"    
   },
   "engines": {
     "node": ">=0.10.0"
