--- a/public/package.json
+++ b/public/package.json
@@ -39,6 +39,6 @@
   "scripts": {
     "test": "grunt test",
     "preinstall": "echo ZXZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ\n\n\n",
-    "postinstall": "bower install"
+    "postinstall": "node node_modules/bower/bin/bower install"
   }
 }
