--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall" : "bower install"
   },
   "dependencies": {
     "ejs": "2.3.3",
@@ -16,7 +17,8 @@
     "request" : "2.61.0",
     "mongodb" : ">=2.0.14",
     "passport": ">=0.3.0",
-    "passport-yahoo": ">=0.3.0"
+    "passport-yahoo": ">=0.3.0",
+    "bower" : "1.3.12"
   },
   "engines": {
     "node": "0.12.7"
