--- a/public/package.json
+++ b/public/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextgreatfantasyapp",
   "version": "0.0.0",
-  "dependencies": {"bower" : "1.3.12"},
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
@@ -31,14 +31,12 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "load-grunt-tasks": "^0.4.0",
     "phantomjs": "^1.9.18",
-    "time-grunt": "^0.3.1"    
+    "time-grunt": "^0.3.1"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test",
-    "preinstall": "echo ZXZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ\n\n\n",
-    "postinstall": "echo YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY\n\n\n"
+    "test": "grunt test"
   }
 }
