--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "postinstall" : "bower install"
+    "postinstall" : "cd public && bower install"
   },
   "dependencies": {
     "ejs": "2.3.3",
