--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb" : ">=2.0.14",
     "passport": ">=0.3.0",
     "passport-yahoo": ">=0.3.0",
-    "bower" : "1.3.12"
+    "bower" : "1.3.12",
+    "ws" : "0.8.0"
   },
   "engines": {
     "node": "0.12.7"
